1st round of CZ translation

--- a/app/src/main/res/values-cs/strings.xml
+++ b/app/src/main/res/values-cs/strings.xml
@@ -3,4 +3,182 @@
     <string name="app_name">AndroidAPS</string>
     <string name="closedloop">Uzavřená smyčka</string>
     <string name="openloop">Otevřená smyčka</string>
+    <string name="alert">Výstaha</string>
+    <string name="apsmode_summary">Typ smyčky</string>
+    <string name="apsmode_title">Typ smyčky</string>
+    <string name="avgdelta">Prům. změna</string>
+    <string name="basal">Bazál</string>
+    <string name="bgavailableinns">Glykémie dostupná v NS</string>
+    <string name="bolus">Bolus</string>
+    <string name="bolusconstraintapplied">Aplikováno omezení bolusu</string>
+    <string name="cancel">Zrušit</string>
+    <string name="carbs">Sacharidy</string>
+    <string name="carbsconstraintapplied">Aplikováno omezení sacharidů</string>
+    <string name="careportal">Péče</string>
+    <string name="careportal_announcement">Oznámení</string>
+    <string name="careportal_bgcheck">Kontrola glykémie</string>
+    <string name="careportal_carbscorrection">Přídavek sacharidů</string>
+    <string name="careportal_cgmsensorinsert">Výměna senzoru</string>
+    <string name="careportal_cgmsensorstart">Znovuspuštění senzoru</string>
+    <string name="careportal_combobolus">Kombinovaný bolus</string>
+    <string name="careportal_correctionbolus">Korekční bolus</string>
+    <string name="careportal_exercise">Cvičení</string>
+    <string name="careportal_insulincartridgechange">Výměna inzulínu</string>
+    <string name="careportal_mealbolus">Bolus na jídlo</string>
+    <string name="careportal_newnstreatment_absolute_label">Absolutní</string>
+    <string name="careportal_newnstreatment_carbs_label">Sacharidy</string>
+    <string name="careportal_newnstreatment_carbtime_label">Čas jídla</string>
+    <string name="careportal_newnstreatment_duration_label">Trvání</string>
+    <string name="careportal_newnstreatment_duration_min">min</string>
+    <string name="careportal_newnstreatment_enteredby_title">Zadal</string>
+    <string name="careportal_newnstreatment_eventtime_label">Čas</string>
+    <string name="careportal_newnstreatment_insulin_label">Inzulín</string>
+    <string name="careportal_newnstreatment_meter">Glukoměr</string>
+    <string name="careportal_newnstreatment_notes_label">Poznámky</string>
+    <string name="careportal_newnstreatment_other">Jiné</string>
+    <string name="careportal_newnstreatment_percent_label">Procenta</string>
+    <string name="careportal_newnstreatment_profile_label">Profil</string>
+    <string name="careportal_newnstreatment_sensor">Senzor</string>
+    <string name="careportal_newnstreatment_split_label">Rozdělění</string>
+    <string name="careportal_note">Poznámka</string>
+    <string name="careportal_openapsoffline">OpenAPS vypnuto</string>
+    <string name="careportal_profileswitch">Přepnutí profilu</string>
+    <string name="careportal_pumpsitechange">Výměna setu</string>
+    <string name="careportal_question">Otázka</string>
+    <string name="careportal_snackbolus">Bolus na svačinu</string>
+    <string name="careportal_tempbasalend">Dočasný bazál konec</string>
+    <string name="careportal_tempbasalstart">Dočasný bazál začátek</string>
+    <string name="changeyourinput">Změňte zadání</string>
+    <string name="configbuilder">Konfigurace</string>
+    <string name="configbuilder_aps">APS</string>
+    <string name="configbuilder_bgsource">Zdroj glykémie</string>
+    <string name="configbuilder_constraints">Omezení</string>
+    <string name="configbuilder_general">Obecné</string>
+    <string name="configbuilder_loop">Smyčka</string>
+    <string name="configbuilder_profile">Profil</string>
+    <string name="configbuilder_pump">Pumpa</string>
+    <string name="configbuilder_tempbasals">Dočasný bazál</string>
+    <string name="configbuilder_treatments">Ošetření</string>
+    <string name="confirmation">Potvrzení</string>
+    <string name="constraintapllied">Aplikováno omezení!</string>
+    <string name="constraints_violation">Mimo povolený rozsah</string>
+    <string name="cs_lang">Čeština</string>
+    <string name="days">dnů</string>
+    <string name="delta">Rozdíl:</string>
+    <string name="duration">Trvání</string>
+    <string name="en_lang">English</string>
+    <string name="entertreatmentquestion">Zadej nové ošetření</string>
+    <string name="glucose">Glykémie:</string>
+    <string name="limits_title">Limity</string>
+    <string name="loop">Smyčka</string>
+    <string name="loop_aps_label">APS</string>
+    <string name="loop_constraintsprocessed_label">Po zpracování omezení</string>
+    <string name="loop_setbypump_label">Nastaveno pumpou</string>
+    <string name="loopdisabled">SMYČKA ZAKÁZÁNA OMEZENÍM</string>
+    <string name="lowsuspend"></string>
+    <string name="lowsuspend_low_title">Hodnota nízké glykémie</string>
+    <string name="manualenacts">Ručně spuštěno</string>
+    <string name="lowsuspend_lowprojected"></string>
+    <string name="maxbasal_summary">Max U/h dočasného bázálu jsou</string>
+    <string name="maxbasal_title">Max bazál</string>
+    <string name="maxbasaliob_summary">Maximální množství nebolusového IOB, které může OpenAPS používat</string>
+    <string name="maxbasaliob_title">Maximální bazální IOB</string>
+    <string name="minago">min zpět</string>
+    <string name="minimalduration">Minimální trvání</string>
+    <string name="nav_backup">Záloha</string>
+    <string name="nav_exit">Ukončit</string>
+    <string name="nav_preferences">Nastavení</string>
+    <string name="nav_refreshtreatments">Aktualizuj ošetření z NS</string>
+    <string name="nav_resetdb">Inicializuj databáze</string>
+    <string name="nav_test_alarm">Test alarmu</string>
+    <string name="noapsselected">ŽÁDNÉ APS NEVYBRÁNO NEBO NEVRÁTILO VÝSLEDEK</string>
+    <string name="nochangerequested">Změna nepožadována</string>
+    <string name="noprofile">Dosud nebyl načten profil z NS</string>
+    <string name="ns_sync_use_absolute_summary">Používat absolutní hodnoty místo procent při nahrávání do NS</string>
+    <string name="ns_sync_use_absolute_title">Použít absolutní hodnoty</string>
+    <string name="nsclient"></string>
+    <string name="nsprofileview_activeprofile_label">Aktivní profil:</string>
+    <string name="nsprofileview_basal_label">Bazál:</string>
+    <string name="nsprofileview_dia_label">Trvání inzulínu:</string>
+    <string name="nsprofileview_ic_label"></string>
+    <string name="nsprofileview_noprofile_text">ŽÁDNÝ PROFIL NENASTAVEN</string>
+    <string name="nsprofileview_target_label">Cíl:</string>
+    <string name="nsprofileview_units_label">Jednotky:</string>
+    <string name="objectives">Cíle</string>
+    <string name="objectives_button_start">Začátek</string>
+    <string name="objectives_button_verify">Kontrola</string>
+    <string name="objectives_gate_label_string">Splnit:</string>
+    <string name="objectives_objective_label_string">Cíl:</string>
+    <string name="ok">OK</string>
+    <string name="openapsma_currenttemp_label">Součaný bazál</string>
+    <string name="openapsma_disabled">Modul zakázán</string>
+    <string name="openapsma_glucosestatus_label">Vstupní glykémie</string>
+    <string name="openapsma_inputparameters_label">Vstupní parametry</string>
+    <string name="openapsma_iobdata_label">IOB data</string>
+    <string name="openapsma_lastenact_label">Poslední provedení</string>
+    <string name="openapsma_lastrun_label">Poslední spuštění</string>
+    <string name="openapsma_mealdata_label">Data o jídle</string>
+    <string name="openapsma_minbg_label"></string>
+    <string name="openapsma_noglucosedata">Nedostupná data o glykémiích</string>
+    <string name="openapsma_noprofile">Nedostupný profil</string>
+    <string name="openapsma_nopump">Žádná pumpa</string>
+    <string name="openapsma_profile_label">Profil</string>
+    <string name="openapsma_request_label">Požadavek</string>
+    <string name="openapsma_result_label">Výsledek</string>
+    <string name="openapsma_run">Sputit teď</string>
+    <string name="openloop_newsuggestion">Dostupné nové doporučení</string>
+    <string name="overview">Přehled</string>
+    <string name="overview_calculator_label">Kalkulačka</string>
+    <string name="overview_newtempbasal_basal_label">Hodnota bazálu</string>
+    <string name="overview_newtempbasal_percent_label">% (100% = současný)</string>
+    <string name="overview_treatment_label">Ošetření</string>
+    <string name="profileviewer">NS profil</string>
+    <string name="pumpstatusavailableinns">Stav pumpy dostupný v NS</string>
+    <string name="rate">Hodnota:</string>
+    <string name="reason">Zdůvodnění:</string>
+    <string name="refreshfromnightscout">Opravdu aktualizovat ošetření z NS</string>
+    <string name="safety">Bezpečnost</string>
+    <string name="safety_useextended_summary">Použít kombo bolusy pro bazály větší než 100%</string>
+    <string name="safety_useextended_title">Použít kombo bolusy</string>
+    <string name="setextendedbolusquestion">Spustit nový kombo bolus:</string>
+    <string name="setbasalquestion">Spustit nový dočasný bazál:</string>
+    <string name="simpleprofile">Jednoduchý profil</string>
+    <string name="tempbasals">Dočasné bazály</string>
+    <string name="tempbasals_iob_label_string">IOB:</string>
+    <string name="tempbasals_iobtotal_label_string">Celkové IOB:</string>
+    <string name="tempbasals_netinsulin_label_string">Inz:</string>
+    <string name="tempbasals_netratio_label_string">Hodn:</string>
+    <string name="tempbasals_realduration_label_string">Trv:</string>
+    <string name="title_activity_preferences">Nastavení</string>
+    <string name="treatmentdeliveryerror">Chyba podání bolusu</string>
+    <string name="treatments">Ošetření</string>
+    <string name="treatments_activity_string">Aktivita:</string>
+    <string name="treatments_carbs_label_string">Sacharidy:</string>
+    <string name="treatments_insulin_label_string">Inzulín:</string>
+    <string name="treatments_iob_label_string">IOB:</string>
+    <string name="treatments_iobactivitytotal_label_string">Celková aktivita IOB:</string>
+    <string name="treatments_iobtotal_label_string">Celkové IOB:</string>
+    <string name="treatments_newtreatment_carbsamount_label">Množtví sacharidů</string>
+    <string name="treatments_newtreatment_insulinamount_label">Množství inzulínu</string>
+    <string name="treatments_wizard_basaliob_label">Bazální IOB</string>
+    <string name="treatments_wizard_bg_label">Glykémie</string>
+    <string name="treatments_wizard_bolusiob_label">Bolusové IOB</string>
+    <string name="treatments_wizard_carbs_label">Sacharidy</string>
+    <string name="treatments_wizard_correction_label">Korekce</string>
+    <string name="treatments_wizard_total_label">CELKEM</string>
+    <string name="treatments_wizard_unit_label">U</string>
+    <string name="treatmentssafety_maxbolus_title">Max. povolený bolus</string>
+    <string name="treatmentssafety_maxcarbs_title">Max. povolené sacharidy</string>
+    <string name="treatmentssafety_title">Bezpečnost zadání ošetřeni</string>
+    <string name="unsupportedclientver">Nepodporovaná verze NSClient</string>
+    <string name="virtualpump">Virtualní pumpa</string>
+    <string name="virtualpump_basebasalrate_label">Základní hodnota bazálu:</string>
+    <string name="virtualpump_battery_label">Baterie:</string>
+    <string name="virtualpump_extendedbolus_label">Kombo bolus:</string>
+    <string name="virtualpump_reservoir_label">Zásobník:</string>
+    <string name="virtualpump_resultok">OK</string>
+    <string name="virtualpump_sqlerror">Chyba databáze</string>
+    <string name="virtualpump_tempbasal_label">Dočasný bazál:</string>
+    <string name="vitualpump_label">VIRTUÁLNÍ PUMPA</string>
+    <string name="xdrip"></string>
 </resources>
