--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">AndroidAPS</string>
-    <string name="title_activity_main" translatable="false">AndroidAPS</string>
+    <string name="title_activity_main">AndroidAPS</string>
 
     <string name="title_activity_preferences">Preferences</string>
     <string name="treatmentssafety_title">Tratments safety</string>
@@ -88,7 +88,7 @@
     <string name="configbuilder">Config Builder</string>
     <string name="lowsuspend">Low Suspend</string>
     <string name="objectives">Objectives</string>
-    <string name="openapsma" translatable="false">OpenAPS MA</string>
+    <string name="openapsma">OpenAPS MA</string>
     <string name="overview">Overview</string>
     <string name="profileviewer">NS Profile</string>
     <string name="simpleprofile">Simple profile</string>
@@ -143,8 +143,8 @@
     <string name="changeyourinput">Change your input!</string>
     <string name="setextendedbolusquestion">Set new extended bolus:</string>
     <string name="configbuilder_bgsource">BG Source</string>
-    <string name="xdrip" translatable="false">xDrip</string>
-    <string name="nsclient" translatable="false">NSClient</string>
+    <string name="xdrip">xDrip</string>
+    <string name="nsclient">NSClient</string>
     <string name="apsmode_title">APS Mode</string>
 
     <string name="closedloop">Closed Loop</string>
