configbuilder fragment translations
Co-authored-by: hitosisasaki <hitosisasaki0212@gmail.com>
Co-authored-by: satokihanada <satoki0212@gmail.com>

--- a/app/src/main/res/values-cs/strings.xml
+++ b/app/src/main/res/values-cs/strings.xml
@@ -196,4 +196,7 @@
     <string name="configbuilder_nsclientversion_label">Verze NSClienta:</string>
     <string name="send">POSLAT</string>
     <string name="missing">Chybí</string>
+    <string name="enabled">Povolený</string>
+    <string name="visible">Viditelný</string>
+    <string name="up">Nahoru</string>
 </resources>
