--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -6,7 +6,7 @@
     <string name="bgavailableinns">BZ verfügbar in NS</string>
     <string name="cancel">Abbrechen</string>
     <string name="carbs">Kohlehydrahte</string>
-    <string name="careportal">CarePortal</string>
+    <string name="careportal">Careportal</string>
     <string name="careportal_correctionbolus">Korrekturbolus</string>
     <string name="careportal_newnstreatment_meter">Messgerät</string>
     <string name="careportal_newnstreatment_notes_label">Notiz</string>
@@ -24,9 +24,179 @@
     <string name="tempbasals_netinsulin_label_string">Ins:</string>
     <string name="tempbasals_netratio_label_string">Ratio:</string>
     <string name="tempbasals_realduration_label_string">Dur:</string>
-    <string name="title_activity_main"></string>
+    <string name="title_activity_main">AndroidAPS</string>
     <string name="title_activity_preferences">Einstellungen</string>
-    <string name="treatmentdeliveryerror"></string>
+    <string name="treatmentdeliveryerror">Bolus Abgabefehler</string>
     <string name="virtualpump_battery_label">Batterie:</string>
     <string name="virtualpump_resultok">OK</string>
+    <string name="basal">Basal</string>
+    <string name="bolus">Bolus</string>
+    <string name="careportal_mealbolus">Mahlzeiten Bolus</string>
+    <string name="careportal_exercise">Sport</string>
+    <string name="careportal_combobolus">Combo Bolus</string>
+    <string name="careportal_cgmsensorstart">CGM Sensor Start</string>
+    <string name="careportal_newnstreatment_absolute_label">Absolut</string>
+    <string name="careportal_newnstreatment_carbs_label">Kohlehydrahte</string>
+    <string name="careportal_newnstreatment_duration_min">min</string>
+    <string name="careportal_newnstreatment_insulin_label">Insulin</string>
+    <string name="careportal_newnstreatment_glucosetype">Glukose Art</string>
+    <string name="careportal_newnstreatment_eventtype">Ereigniss Typ</string>
+    <string name="careportal_newnstreatment_eventtime_label">Ereigniss Zeit</string>
+    <string name="careportal_newnstreatment_percent_label">Prozent</string>
+    <string name="careportal_note">Notiz</string>
+    <string name="careportal_openapsoffline">OpenAPS Offline</string>
+    <string name="careportal_profileswitch">Profilwechsel</string>
+    <string name="careportal_pumpsitechange">Pumpenkatheterwechsel</string>
+    <string name="careportal_question">Frage</string>
+    <string name="careportal_snackbolus">Snack Bolus</string>
+    <string name="careportal_tempbasalend">Temp Basal Ende</string>
+    <string name="careportal_tempbasalstart">Temp Basal Start</string>
+    <string name="changeyourinput">Ändere deine Eingabe!</string>
+    <string name="closedloop">Closed Loop</string>
+    <string name="configbuilder_aps">APS</string>
+    <string name="configbuilder_bgsource">BZ Quelle</string>
+    <string name="configbuilder_loop">Loop</string>
+    <string name="configbuilder_nightscoutversion_label">Nightscout version:</string>
+    <string name="configbuilder_nsclientversion_label">NSClient version:</string>
+    <string name="configbuilder_tempbasals">Temp Basals</string>
+    <string name="delta">Delta:</string>
+    <string name="duration">Dauer:</string>
+    <string name="en_lang">Englische Sprache</string>
+    <string name="loop_aps_label">APS</string>
+    <string name="glucose">Glukose:</string>
+    <string name="nav_backup">Backup</string>
+    <string name="nav_preferences">Einstellungen</string>
+    <string name="nsclient">NSClient</string>
+    <string name="nsprofileview_activeprofile_label">Aktives Profil:</string>
+    <string name="nsprofileview_basal_label">Basal</string>
+    <string name="nsprofileview_dia_label">DIA:</string>
+    <string name="nsprofileview_ic_label">IC:</string>
+    <string name="nsprofileview_isf_label">ISF:</string>
+    <string name="nsprofileview_target_label">Ziel:</string>
+    <string name="nsprofileview_units_label">Einheiten:</string>
+    <string name="objectives_button_start">Start</string>
+    <string name="objectives_button_verify">Verifizieren</string>
+    <string name="openapsma">OpenAPS MA</string>
+    <string name="openapsma_glucosestatus_label">Glukose Status</string>
+    <string name="openapsma_inputparameters_label">Eingabeparamter</string>
+    <string name="openapsma_iobdata_label">IOB Daten</string>
+    <string name="openloop">Open Loop</string>
+    <string name="overview_bolus_label">Bolus</string>
+    <string name="overview_calculator_label">Rechner</string>
+    <string name="overview_tempbasal_button">TempBasal</string>
+    <string name="rate">Rate:</string>
+    <string name="reason">Grund:</string>
+    <string name="safety">Sicherheit:</string>
+    <string name="send">SEND</string>
+    <string name="treatments_activity_string">Aktivität:</string>
+    <string name="treatments_carbs_label_string">Kohlehydrahte:</string>
+    <string name="treatments_insulin_label_string">Insulin:</string>
+    <string name="treatments_iob_label_string">IOB:</string>
+    <string name="treatments_iobactivitytotal_label_string">Aktives IOB total:</string>
+    <string name="treatments_iobtotal_label_string">IOB total:</string>
+    <string name="treatments_wizard_basaliob_label">Basal IOB</string>
+    <string name="treatments_wizard_unit_label">U</string>
+    <string name="up">Up</string>
+    <string name="virtualpump">Vituelle Pumpe</string>
+    <string name="virtualpump_reservoir_label">Reservoir:</string>
+    <string name="xdrip">xDrip</string>
+    <string name="vitualpump_label">VIRTUELLE PUMPE</string>
+    <string name="virtualpump_sqlerror">SQL Error</string>
+    <string name="virtualpump_extendedbolus_label">Extended bolus:</string>
+    <string name="virtualpump_tempbasal_label">Temp basal:</string>
+    <string name="visible">Sichtbar</string>
+    <string name="virtualpump_basebasalrate_label">Basis Basalrate:</string>
+    <string name="treatments_wizard_total_label">TOTAL</string>
+    <string name="unsupportedclientver">Nicht unterstützte Version von NSClient</string>
+    <string name="treatments_wizard_bg_label">BZ</string>
+    <string name="treatments_wizard_bolusiob_label">Bolus IOB</string>
+    <string name="treatments_wizard_carbs_label">Kohlehydrahte</string>
+    <string name="treatments_wizard_correction_label">Korr</string>
+    <string name="treatments_newtreatment_carbsamount_label">Kohlehydraht Menge</string>
+    <string name="treatments_newtreatment_insulinamount_label">Insulin Menge</string>
+    <string name="treatments">Treatments</string>
+    <string name="treatmentssafety_maxbolus_title">Max erlaubter Bolus</string>
+    <string name="treatmentssafety_maxcarbs_title">Max erlaubte Kohlehydrahte</string>
+    <string name="treatmentssafety_title">Tratments Sicherheit</string>
+    <string name="tempbasals">Temp Basals</string>
+    <string name="simpleprofile">Einfaches Profil</string>
+    <string name="setextendedbolusquestion">Setze neuen extended Bolus:</string>
+    <string name="setbasalquestion">Akzeptiere neue temp Basalrate:</string>
+    <string name="safety_useextended_title">Benutze extended Bolus</string>
+    <string name="safety_useextended_summary"><![CDATA[Benutze extended Bolus für hohe temps (\>200%)]]></string>
+    <string name="refreshfromnightscout">Möchtest du die Treatments von Nightscout abrufen</string>
+    <string name="pumpstatusavailableinns">Pumpen Status verfügbar in NS</string>
+    <string name="overview_newtempbasal_percent_label">% (100% = current)</string>
+    <string name="overview_newtempbasal_basal_label">Basal Wert</string>
+    <string name="overview_extendedbolus_button">Extended Bolus</string>
+    <string name="overview">Übersicht</string>
+    <string name="openloop_newsuggestion">Neue Empfehlung verfügbar</string>
+    <string name="openapsma_result_label">Ergebnis</string>
+    <string name="openapsma_request_label">Anfrage</string>
+    <string name="openapsma_run">Run now</string>
+    <string name="openapsma_nopump">Keine Pumpe verfügbar</string>
+    <string name="openapsma_noprofile">Kein Profil verfügbar</string>
+    <string name="openapsma_noglucosedata">Keine BZ Daten verfügbar</string>
+    <string name="openapsma_minbg_label">Low target</string>
+    <string name="openapsma_mealdata_label">Mahlzeiten Daten</string>
+    <string name="openapsma_lastrun_label">Last run</string>
+    <string name="openapsma_lastenact_label">Last enacted</string>
+    <string name="openapsma_disabled">Plugin ist deaktiviert</string>
+    <string name="openapsma_currenttemp_label">Current temp</string>
+    <string name="objectives_gate_label_string">Gate:</string>
+    <string name="objectives_objective_label_string">Objective:</string>
+    <string name="objectives">Objectives</string>
+    <string name="nsprofileview_noprofile_text">KEIN PROFIL GESETZT</string>
+    <string name="nsclientnotinstalled">NSClient nicht installiert. Record lost!</string>
+    <string name="ns_sync_use_absolute_title">Benutze absolute Werte</string>
+    <string name="ns_sync_use_absolute_summary">Use absolute basal values instead of percent in upload to NS</string>
+    <string name="noprofile">Bisher noch kein Profil von NS geladen</string>
+    <string name="nochangerequested">No change requested</string>
+    <string name="noapsselected">NO APS SELECTED OR PROVIDED RESULT</string>
+    <string name="nav_test_alarm">Test Alarm</string>
+    <string name="avgdelta">Avg. delta:</string>
+    <string name="bolusconstraintapplied">Bolus constraint applied</string>
+    <string name="careportal_announcement">Ankündigung</string>
+    <string name="careportal_bgcheck">BZ Check</string>
+    <string name="careportal_carbscorrection">Kohlehydraht Korrektur</string>
+    <string name="careportal_cgmsensorinsert">CGM Sensor gesetzt</string>
+    <string name="careportal_insulincartridgechange">Insulin Reservoir wechsel</string>
+    <string name="careportal_newnstreatment_duration_label">Dauer</string>
+    <string name="careportal_newnstreatment_carbtime_label">Carb time</string>
+    <string name="careportal_newnstreatment_enteredby_title">Eingegeben durch</string>
+    <string name="careportal_newnstreatment_other">Anderes</string>
+    <string name="careportal_newnstreatment_split_label">Split</string>
+    <string name="configbuilder">Konfigurations Builder</string>
+    <string name="configbuilder_constraints">Constraints</string>
+    <string name="configbuilder_general">Generell</string>
+    <string name="configbuilder_treatments">Treatments</string>
+    <string name="constraintapllied">Constraint applied!</string>
+    <string name="constraints_violation">Constraints violation</string>
+    <string name="cs_lang">Tschechische Sprache</string>
+    <string name="loop_setbypump_label">Gesetzt durch Pumpe</string>
+    <string name="lowsuspend">Low Suspend</string>
+    <string name="lowsuspend_low">Low Suspend:</string>
+    <string name="lowsuspend_cancelmessage">LowSuspend: Cancel low temp</string>
+    <string name="loopdisabled">LOOP DISABLED BY CONSTRAINTS</string>
+    <string name="loop_constraintsprocessed_label">After processed constraints</string>
+    <string name="loop">Loop</string>
+    <string name="limits_title">Limits</string>
+    <string name="lowsuspend_low_title">Low BG threshold</string>
+    <string name="lowsuspend_lowmessage">LOW: Temp basal 0%</string>
+    <string name="lowsuspend_lowprojected">Low projected:</string>
+    <string name="lowsuspend_lowprojectedmessage">LOW PROJECTED: Temp basal 0%</string>
+    <string name="manualenacts">Manual enacts</string>
+    <string name="maxbasal_summary">Max U/hr of Temp Basal can be set to</string>
+    <string name="carbsconstraintapplied">Carbs constraint applied</string>
+    <string name="nav_resetdb">Reset Datenbanken</string>
+    <string name="minimalduration">Minimale Dauer</string>
+    <string name="maxbasaliob_title">Max basal IOB</string>
+    <string name="minago">min ago</string>
+    <string name="maxbasaliob_summary">Maximum amount of non-bolus IOB OpenAPS can deliver</string>
+    <string name="maxbasal_title">Max basal</string>
+    <string name="nav_refreshtreatments">Erneure treatments von NS</string>
+    <string name="nav_exit">Exit</string>
+    <string name="missing">Fehlend</string>
+    <string name="enabled">Enabled</string>
+    <string name="entertreatmentquestion">Eingabe neues treatment</string>
 </resources>
